Adde extent report

--- a/SwagLabs/test-output/emailable-report.html
+++ b/SwagLabs/test-output/emailable-report.html
@@ -9,15 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">59,489</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">20,389</td><td>e2e</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">testcases.Scenarios</td><td><a href="#m0">LoginFlow</a></td><td rowspan="1">1712842362912</td><td rowspan="1">102</td></tr><tr class="passedeven"><td><a href="#m1">addingToCart</a></td><td rowspan="1">1712842394454</td><td rowspan="1">154</td></tr><tr class="passedeven"><td><a href="#m2">additional_Case</a></td><td rowspan="1">1712842413612</td><td rowspan="1">788</td></tr><tr class="passedeven"><td><a href="#m3">checkOut</a></td><td rowspan="1">1712842403031</td><td rowspan="1">600</td></tr><tr class="passedeven"><td><a href="#m4">productListingVerification</a></td><td rowspan="1">1712842371504</td><td rowspan="1">148</td></tr><tr class="passedeven"><td><a href="#m5">sortingCheck</a></td><td rowspan="1">1712842380284</td><td rowspan="1">5735</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcases.Scenarios</td><td><a href="#m0">LoginFlow</a></td><td rowspan="1">1712854933737</td><td rowspan="1">303</td></tr><tr class="passedeven"><td><a href="#m1">additional_Case</a></td><td rowspan="1">1712854943474</td><td rowspan="1">969</td></tr></tbody>
 </table>
 <h2>Test</h2><h3 id="m0">testcases.Scenarios#LoginFlow</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testcases.Scenarios#addingToCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testcases.Scenarios#additional_Case</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">testcases.Scenarios#checkOut</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">testcases.Scenarios#productListingVerification</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">testcases.Scenarios#sortingCheck</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testcases.Scenarios#additional_Case</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
