--- a/SwagLabs/test-output/ExtentReportResults.html
+++ b/SwagLabs/test-output/ExtentReportResults.html
@@ -15,7 +15,7 @@
 		<meta name='extentx' id='extentx' content='' />
 		
 		<title>
-				ExtentReports 2.0
+				Extent Automation Reports
 		</title>
 		
 		
@@ -47,13 +47,13 @@
 					<a href='#!' onclick="_updateCurrentStage(-1)" class='dashboard-view'><i class='mdi-action-track-changes'></i></i>Analysis</a>
 				</li>
 			</ul>
-			<span class='report-name'>Automation Report</span> <span class='report-headline'></span>
+			<span class='report-name'>Swag Labs</span> <span class='report-headline'></span>
 			<ul class='right hide-on-med-and-down nav-right'>
 				<li class='theme-selector' alt='Click to toggle dark theme. To enable by default, use js configuration $("body").addClass("dark");' title='Click to toggle dark theme. To enable by default, use js configuration $("body").addClass("dark");'>
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2024-04-11 22:32:24</span>
+					<span class='suite-started-time'>2024-04-12 00:24:01</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 20s+132ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 22s+7ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 20s+132ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 22s+7ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2024-04-11 22:32:04</span> 
+							<span class='panel-lead suite-started-time'>2024-04-12 00:23:39</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2024-04-11 22:32:24</span> 
+							<span class='panel-lead suite-ended-time'>2024-04-12 00:24:01</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,7 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='e961d3d0-647b-4ccf-8cd5-64edc0a95cf3'>
+										<li class='collection-item test displayed active pass ' extentid='4352d707-61c4-4571-b3a9-c3c43940049e'>
 											<div class='test-head'>
 												<span class='test-name'>LoginFlow </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -245,9 +245,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2024-04-11 22:32:13</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2024-04-11 22:32:13</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+56ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2024-04-12 00:23:50</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2024-04-12 00:23:50</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+336ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -264,33 +264,18 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:13</td>
-																	<td class='step-details'>Element is displayed: Element:[[ChromeDriver: chrome on windows (bc15137d340609f7738c8d23778e3b1e)] -> xpath: //div[contains(text(), 'Swag Labs')]]</td>
+																	<td class='timestamp'>00:23:50</td>
+																	<td class='step-details'>Element is displayed: Element:[[ChromeDriver: chrome on windows (c137bdf1653943aa9664b36f3b5f4a81)] -> xpath: //div[contains(text(), 'Swag Labs')]]</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:13</td>
+																	<td class='timestamp'>00:23:50</td>
 																	<td class='step-details'>Element text is matching:Swag Labs</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:18</td>
-																	<td class='step-details'>Entered data:standard_user in element:[[ChromeDriver: chrome on windows (521bc336e41b4e76ebcf054ce3501590)] -> xpath: //input[@placeholder='Username']]</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:18</td>
-																	<td class='step-details'>Entered data:secret_sauce in element:[[ChromeDriver: chrome on windows (521bc336e41b4e76ebcf054ce3501590)] -> xpath: //input[@placeholder='Password']]</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:18</td>
-																	<td class='step-details'>Clicked on element:[[ChromeDriver: chrome on windows (521bc336e41b4e76ebcf054ce3501590)] -> id: login-button]</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:23</td>
-																	<td class='step-details'>Waited for 5 of seconds</td>
+																	<td class='timestamp'>00:23:50</td>
+																	<td class='step-details'>Testcase passed</td>
 																</tr>
 														</tbody>
 													</table>
@@ -299,7 +284,7 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='042191a0-d3f7-4fb9-99b6-56a656afcd78'>
+										<li class='collection-item test displayed active pass ' extentid='16a7aa33-e964-4fcf-81fa-0a1a70184021'>
 											<div class='test-head'>
 												<span class='test-name'>additional_Case </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -307,9 +292,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2024-04-11 22:32:23</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2024-04-11 22:32:24</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+930ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2024-04-12 00:24:00</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2024-04-12 00:24:01</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 1s+130ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -326,68 +311,68 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:23</td>
+																	<td class='timestamp'>00:24:00</td>
 																	<td class='step-details'>Selected: Price (low to high) from dropdown</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:23</td>
+																	<td class='timestamp'>00:24:00</td>
 																	<td class='step-details'>Added product to the cart</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:23</td>
+																	<td class='timestamp'>00:24:00</td>
 																	<td class='step-details'>Added product to the cart</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:23</td>
+																	<td class='timestamp'>00:24:00</td>
 																	<td class='step-details'>Added product to the cart</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:23</td>
-																	<td class='step-details'>Clicked on element:[[ChromeDriver: chrome on windows (521bc336e41b4e76ebcf054ce3501590)] -> xpath: //a[@class = 'shopping_cart_link']]</td>
+																	<td class='timestamp'>00:24:00</td>
+																	<td class='step-details'>Clicked on element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> xpath: //a[@class = 'shopping_cart_link']]</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:23</td>
-																	<td class='step-details'>Clicked on element:[[ChromeDriver: chrome on windows (521bc336e41b4e76ebcf054ce3501590)] -> id: checkout]</td>
+																	<td class='timestamp'>00:24:00</td>
+																	<td class='step-details'>Clicked on element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> id: checkout]</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:23</td>
-																	<td class='step-details'>Entered data:SampleFirstName in element:[[ChromeDriver: chrome on windows (521bc336e41b4e76ebcf054ce3501590)] -> id: first-name]</td>
+																	<td class='timestamp'>00:24:00</td>
+																	<td class='step-details'>Entered data:SampleFirstName in element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> id: first-name]</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:24</td>
-																	<td class='step-details'>Entered data:SampleLastName in element:[[ChromeDriver: chrome on windows (521bc336e41b4e76ebcf054ce3501590)] -> id: last-name]</td>
+																	<td class='timestamp'>00:24:00</td>
+																	<td class='step-details'>Entered data:SampleLastName in element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> id: last-name]</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:24</td>
-																	<td class='step-details'>Entered data:556677 in element:[[ChromeDriver: chrome on windows (521bc336e41b4e76ebcf054ce3501590)] -> id: postal-code]</td>
+																	<td class='timestamp'>00:24:00</td>
+																	<td class='step-details'>Entered data:556677 in element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> id: postal-code]</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:24</td>
-																	<td class='step-details'>Clicked on element:[[ChromeDriver: chrome on windows (521bc336e41b4e76ebcf054ce3501590)] -> id: continue]</td>
+																	<td class='timestamp'>00:24:00</td>
+																	<td class='step-details'>Clicked on element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> id: continue]</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:24</td>
-																	<td class='step-details'>Clicked on element:[[ChromeDriver: chrome on windows (521bc336e41b4e76ebcf054ce3501590)] -> id: finish]</td>
+																	<td class='timestamp'>00:24:01</td>
+																	<td class='step-details'>Clicked on element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> id: finish]</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:24</td>
-																	<td class='step-details'>Element is displayed: Element:[[ChromeDriver: chrome on windows (521bc336e41b4e76ebcf054ce3501590)] -> xpath: //h2[contains(text(),'Thank you for your order!')]]</td>
+																	<td class='timestamp'>00:24:01</td>
+																	<td class='step-details'>Element is displayed: Element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> xpath: //h2[contains(text(),'Thank you for your order!')]]</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:32:24</td>
-																	<td class='step-details'>additional_Case testcase is passed</td>
+																	<td class='timestamp'>00:24:01</td>
+																	<td class='step-details'>Testcase passed</td>
 																</tr>
 														</tbody>
 													</table>
